prevent List creation in VerifyingFile.leaseWhiteHelper